--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start": "parcel src/index.html",
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "npm run build src/index.html"
   },
   "author": "Simon Pinkas",
   "license": "ISC",
